--- a/PhotoAppUsersAPICognito/pom.xml
+++ b/PhotoAppUsersAPICognito/pom.xml
@@ -45,7 +45,11 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-kms</artifactId>
+            <version>1.12.484</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
